(ERRORS) Mostly fix JEI plugin